# project-anima3

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  anima-rule.mdc  interactive.py  main.py  manual_test_context_builder.py  manual_test_llm_adapter.py  manual_test_simulation_engine.py  pyproject.toml  requirements.txt  run_tests.py  setup.py
.archive/: README.md
characters/: __init__.py
core/: __init__.py  character_manager.py  context_builder.py  data_models.py  information_updater.py  llm_adapter.py  scene_manager.py  simulation_engine.py
docs/: issue_template.md  manual.md  project_anima.md  tasks.md
examples/: manual_test_context_builder.py  manual_test_information_updater.py  manual_test_llm_adapter.py  manual_test_simulation_engine.py
issues/: feat-improve-ui-and-simulation-management.md  feat-integrated-inspector-panel.md  feat-move-intervention-to-control-panel.md  feat-story-creation-workflow-implementation.md  feat-ui-improvements-based-on-feedback.md  feat-ui-layout-improvements.md  feat-ui-layout-redesign-and-features.md  feat-ui-redesign-material-design-3.md  feat:directory_structure_reorganization.md  feat:information_updater.md  feat:langgraph_workflow_enhancement.md  feat:log_output.md  feat:long_term_update_execution_save.md  feat:web_ui_backend_setup.md  feat_context_builder_implementation.md  fix-file-editor-functionality.md  fix-multiple-character-simulation.md  fix-simulation-history-not-saved.md  fix:ci_pytest_failures.md  fix:ci_tests_import_error.md  fix:long_term_update.md  fix:server-restart-and-simulation-start.md  fix:simulation-engine-character-manager-error.md  test-new-ui-workflow.md
project_anima/: __init__.py  cli.py  (+1 more)
(+202 files in other folders)
