[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-anima"
version = "0.1.0"
authors = [
    {name = "Project Anima Team"},
]
description = "AIキャラクターシミュレーター"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0.0",
    "langgraph>=0.0.15",
    "pyyaml>=6.0.1",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
packages = ["core", "characters", "scenes", "logs", "prompts", "utils"] 