[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_anima"
version = "0.1.0"
description = "AI Character Simulator"
readme = "README.md"
authors = [
    {name = "Project Anima Team"}
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/project-anima"
"Bug Tracker" = "https://github.com/yourusername/project-anima/issues"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 
pythonpath = ["."]
addopts = "--import-mode=importlib" 